--- a/Speart/nbproject/project.properties
+++ b/Speart/nbproject/project.properties
@@ -51,7 +51,9 @@ file.reference.swingx-all-1.6.3.jar=libs/swingx-all-1.6.3.jar
 file.reference.tritonus_share.jar=libs/tritonus_share.jar
 file.reference.weka.jar=libs/weka.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.AbsoluteLayout.jar}:\
     ${file.reference.DateChooser.jar}:\
@@ -98,6 +100,15 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
 main.class=vista.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
@@ -109,7 +120,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=-Djava.library.path=.:/usr/lib/swi-prolog/lib/amd64
+run.jvmargs=-Djava.library.path="C:\\Program Files (x86)\\swipl\\bin;C:\\Program Files (x86)\\swipl\\lib"
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
