--- a/Speart/nbproject/project.properties
+++ b/Speart/nbproject/project.properties
@@ -31,13 +31,22 @@ excludes=
 file.reference.AbsoluteLayout.jar=libs/AbsoluteLayout.jar
 file.reference.antlr-2.7.7.jar=libs/antlr-2.7.7.jar
 file.reference.basicplayer3.0.jar=libs/basicplayer3.0.jar
+file.reference.commons-beanutils-1.8.0.jar=C:\\Users\\mateo\\Downloads\\Speart\\libs\\commons-beanutils-1.8.0.jar
+file.reference.commons-collections-2.1.1.jar=C:\\Users\\mateo\\Downloads\\Speart\\libs\\commons-collections-2.1.1.jar
+file.reference.commons-digester-1.7.jar=C:\\Users\\mateo\\Downloads\\Speart\\libs\\commons-digester-1.7.jar
+file.reference.commons-logging-1.0.4.jar=C:\\Users\\mateo\\Downloads\\Speart\\libs\\commons-logging-1.0.4.jar
+file.reference.commons-logging-1.1.jar=C:\\Users\\mateo\\Downloads\\Speart\\libs\\commons-logging-1.1.jar
 file.reference.DateChooser.jar=libs/DateChooser.jar
 file.reference.dom4j-1.6.1.jar=libs/dom4j-1.6.1.jar
 file.reference.gnuprologjava-0.2.6.jar=libs/gnuprologjava-0.2.6.jar
+file.reference.groovy-all-1.5.5.jar=C:\\Users\\mateo\\Downloads\\Speart\\libs\\groovy-all-1.5.5.jar
 file.reference.hibernate-commons-annotations-4.0.1.Final.jar=libs/hibernate-commons-annotations-4.0.1.Final.jar
 file.reference.hibernate-core-4.1.7.Final.jar=libs/hibernate-core-4.1.7.Final.jar
 file.reference.hibernate-entitymanager-4.1.7.Final.jar=libs/hibernate-entitymanager-4.1.7.Final.jar
 file.reference.hibernate-jpa-2.0-api-1.0.1.Final.jar=libs/hibernate-jpa-2.0-api-1.0.1.Final.jar
+file.reference.iText-2.1.7.jar=C:\\Users\\mateo\\Downloads\\Speart\\libs\\iText-2.1.7.jar
+file.reference.jasperreports-3.7.4.jar=C:\\Users\\mateo\\Downloads\\Speart\\libs\\jasperreports-3.7.4.jar
+file.reference.jasypt-1.6.jar=C:\\Users\\mateo\\Downloads\\Speart\\libs\\jasypt-1.6.jar
 file.reference.javassist-3.15.0-GA.jar=libs/javassist-3.15.0-GA.jar
 file.reference.jboss-logging-3.1.0.GA.jar=libs/jboss-logging-3.1.0.GA.jar
 file.reference.jboss-transaction-api_1.1_spec-1.0.0.Final.jar=libs/jboss-transaction-api_1.1_spec-1.0.0.Final.jar
@@ -76,7 +85,16 @@ javac.classpath=\
     ${file.reference.nimrodlf.jar}:\
     ${file.reference.swingx-all-1.6.3.jar}:\
     ${file.reference.tritonus_share.jar}:\
-    ${file.reference.weka.jar}
+    ${file.reference.weka.jar}:\
+    ${file.reference.commons-beanutils-1.8.0.jar}:\
+    ${file.reference.commons-collections-2.1.1.jar}:\
+    ${file.reference.commons-digester-1.7.jar}:\
+    ${file.reference.commons-logging-1.0.4.jar}:\
+    ${file.reference.commons-logging-1.1.jar}:\
+    ${file.reference.iText-2.1.7.jar}:\
+    ${file.reference.jasperreports-3.7.4.jar}:\
+    ${file.reference.jasypt-1.6.jar}:\
+    ${file.reference.groovy-all-1.5.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
