--- a/Speart/nbproject/project.properties
+++ b/Speart/nbproject/project.properties
@@ -6,6 +6,9 @@ annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.title=Speart
 application.vendor=francisco
+auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.tab-size=8
+auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.text-limit-width=80
+auxiliary.org-netbeans-modules-editor-indent.CodeStyle.usedProfile=default
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -31,14 +34,22 @@ excludes=
 file.reference.AbsoluteLayout.jar=libs/AbsoluteLayout.jar
 file.reference.antlr-2.7.7.jar=libs/antlr-2.7.7.jar
 file.reference.basicplayer3.0.jar=libs/basicplayer3.0.jar
+file.reference.commons-beanutils-1.8.0.jar=libs/commons-beanutils-1.8.0.jar
+file.reference.commons-collections-2.1.1.jar=libs/commons-collections-2.1.1.jar
+file.reference.commons-digester-1.7.jar=libs/commons-digester-1.7.jar
+file.reference.commons-logging-1.0.4.jar=libs/commons-logging-1.0.4.jar
+file.reference.commons-logging-1.1.jar=libs/commons-logging-1.1.jar
 file.reference.DateChooser.jar=libs/DateChooser.jar
 file.reference.dom4j-1.6.1.jar=libs/dom4j-1.6.1.jar
 file.reference.gnuprologjava-0.2.6.jar=libs/gnuprologjava-0.2.6.jar
+file.reference.groovy-all-1.5.5.jar=libs/groovy-all-1.5.5.jar
 file.reference.hibernate-commons-annotations-4.0.1.Final.jar=libs/hibernate-commons-annotations-4.0.1.Final.jar
 file.reference.hibernate-core-4.1.7.Final.jar=libs/hibernate-core-4.1.7.Final.jar
 file.reference.hibernate-entitymanager-4.1.7.Final.jar=libs/hibernate-entitymanager-4.1.7.Final.jar
 file.reference.hibernate-jpa-2.0-api-1.0.1.Final.jar=libs/hibernate-jpa-2.0-api-1.0.1.Final.jar
-file.reference.jasperreports-5.0.1.jar=libs/jasperreports-5.0.1.jar
+file.reference.iText-2.1.7.jar=libs/iText-2.1.7.jar
+file.reference.jasperreports-3.7.4.jar=libs/jasperreports-3.7.4.jar
+file.reference.jasypt-1.6.jar=libs/jasypt-1.6.jar
 file.reference.javassist-3.15.0-GA.jar=libs/javassist-3.15.0-GA.jar
 file.reference.jboss-logging-3.1.0.GA.jar=libs/jboss-logging-3.1.0.GA.jar
 file.reference.jboss-transaction-api_1.1_spec-1.0.0.Final.jar=libs/jboss-transaction-api_1.1_spec-1.0.0.Final.jar
@@ -78,7 +89,15 @@ javac.classpath=\
     ${file.reference.swingx-all-1.6.3.jar}:\
     ${file.reference.tritonus_share.jar}:\
     ${file.reference.weka.jar}:\
-    ${file.reference.jasperreports-5.0.1.jar}
+    ${file.reference.commons-beanutils-1.8.0.jar}:\
+    ${file.reference.commons-collections-2.1.1.jar}:\
+    ${file.reference.commons-digester-1.7.jar}:\
+    ${file.reference.commons-logging-1.0.4.jar}:\
+    ${file.reference.commons-logging-1.1.jar}:\
+    ${file.reference.groovy-all-1.5.5.jar}:\
+    ${file.reference.iText-2.1.7.jar}:\
+    ${file.reference.jasperreports-3.7.4.jar}:\
+    ${file.reference.jasypt-1.6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -103,7 +122,8 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-jnlp.codebase.type=no.codebase
+jnlp.codebase.type=local
+jnlp.codebase.url=file:/C:/Users/alf/Documents/NetBeansProjects/Speart/dist/
 jnlp.descriptor=application
 jnlp.enabled=false
 jnlp.mixed.code=default
@@ -123,7 +143,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=-Djava.library.path="/usr/lib/swipl-6.2.6/lib/x86_64-linux"
+run.jvmargs=-Djava.library.path="/usr/lib64/swipl-jpl"
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
