Otras actualizaciones mias

--- a/Speart/nbproject/project.properties
+++ b/Speart/nbproject/project.properties
@@ -48,7 +48,7 @@ file.reference.hibernate-core-4.1.7.Final.jar=libs/hibernate-core-4.1.7.Final.ja
 file.reference.hibernate-entitymanager-4.1.7.Final.jar=libs/hibernate-entitymanager-4.1.7.Final.jar
 file.reference.hibernate-jpa-2.0-api-1.0.1.Final.jar=libs/hibernate-jpa-2.0-api-1.0.1.Final.jar
 file.reference.iText-2.1.7.jar=libs/iText-2.1.7.jar
-file.reference.jasperreports-3.7.4.jar=libs/jasperreports-3.7.4.jar
+file.reference.jasperreports-5.0.1.jar=libs/jasperreports-5.0.1.jar
 file.reference.jasypt-1.6.jar=libs/jasypt-1.6.jar
 file.reference.javassist-3.15.0-GA.jar=libs/javassist-3.15.0-GA.jar
 file.reference.jboss-logging-3.1.0.GA.jar=libs/jboss-logging-3.1.0.GA.jar
@@ -96,8 +96,8 @@ javac.classpath=\
     ${file.reference.commons-logging-1.1.jar}:\
     ${file.reference.groovy-all-1.5.5.jar}:\
     ${file.reference.iText-2.1.7.jar}:\
-    ${file.reference.jasperreports-3.7.4.jar}:\
-    ${file.reference.jasypt-1.6.jar}
+    ${file.reference.jasypt-1.6.jar}:\
+    ${file.reference.jasperreports-5.0.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
