--- a/Speart/nbproject/project.properties
+++ b/Speart/nbproject/project.properties
@@ -143,7 +143,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=-Djava.library.path="/usr/lib64/swipl-jpl"
+run.jvmargs=-Djava.library.path="C:\\Program Files (x86)\\swipl\\bin;C:\\Program Files (x86)\\swipl\\lib"
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
