--- a/Speart/nbproject/project.properties
+++ b/Speart/nbproject/project.properties
@@ -71,12 +71,21 @@ javac.classpath=\
     ${file.reference.DateChooser.jar}:\
     ${file.reference.antlr-2.7.7.jar}:\
     ${file.reference.basicplayer3.0.jar}:\
+    ${file.reference.commons-beanutils-1.8.0.jar}:\
+    ${file.reference.commons-collections-2.1.1.jar}:\
+    ${file.reference.commons-digester-1.7.jar}:\
+    ${file.reference.commons-logging-1.0.4.jar}:\
+    ${file.reference.commons-logging-1.1.jar}:\
     ${file.reference.dom4j-1.6.1.jar}:\
     ${file.reference.gnuprologjava-0.2.6.jar}:\
+    ${file.reference.groovy-all-1.5.5.jar}:\
     ${file.reference.hibernate-commons-annotations-4.0.1.Final.jar}:\
     ${file.reference.hibernate-core-4.1.7.Final.jar}:\
     ${file.reference.hibernate-entitymanager-4.1.7.Final.jar}:\
     ${file.reference.hibernate-jpa-2.0-api-1.0.1.Final.jar}:\
+    ${file.reference.iText-2.1.7.jar}:\
+    ${file.reference.jasperreports-5.0.1.jar}:\
+    ${file.reference.jasypt-1.6.jar}:\
     ${file.reference.javassist-3.15.0-GA.jar}:\
     ${file.reference.jboss-logging-3.1.0.GA.jar}:\
     ${file.reference.jboss-transaction-api_1.1_spec-1.0.0.Final.jar}:\
@@ -88,16 +97,7 @@ javac.classpath=\
     ${file.reference.nimrodlf.jar}:\
     ${file.reference.swingx-all-1.6.3.jar}:\
     ${file.reference.tritonus_share.jar}:\
-    ${file.reference.weka.jar}:\
-    ${file.reference.commons-beanutils-1.8.0.jar}:\
-    ${file.reference.commons-collections-2.1.1.jar}:\
-    ${file.reference.commons-digester-1.7.jar}:\
-    ${file.reference.commons-logging-1.0.4.jar}:\
-    ${file.reference.commons-logging-1.1.jar}:\
-    ${file.reference.groovy-all-1.5.5.jar}:\
-    ${file.reference.iText-2.1.7.jar}:\
-    ${file.reference.jasypt-1.6.jar}:\
-    ${file.reference.jasperreports-5.0.1.jar}
+    ${file.reference.weka.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
