--- a/Speart/nbproject/project.properties
+++ b/Speart/nbproject/project.properties
@@ -5,7 +5,7 @@ annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.title=Speart
-application.vendor=francisco
+application.vendor=cris
 auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.tab-size=8
 auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.text-limit-width=80
 auxiliary.org-netbeans-modules-editor-indent.CodeStyle.usedProfile=default
@@ -51,11 +51,14 @@ file.reference.iText-2.1.7.jar=libs/iText-2.1.7.jar
 file.reference.jasperreports-5.0.1.jar=libs/jasperreports-5.0.1.jar
 file.reference.jasypt-1.6.jar=libs/jasypt-1.6.jar
 file.reference.javassist-3.15.0-GA.jar=libs/javassist-3.15.0-GA.jar
+file.reference.javassist.jar=libs/javassist.jar
 file.reference.jboss-logging-3.1.0.GA.jar=libs/jboss-logging-3.1.0.GA.jar
 file.reference.jboss-transaction-api_1.1_spec-1.0.0.Final.jar=libs/jboss-transaction-api_1.1_spec-1.0.0.Final.jar
 file.reference.jcalendar-1.4.jar=libs/jcalendar-1.4.jar
+file.reference.jcommon-1.0.16.jar=libs/jcommon-1.0.16.jar
 file.reference.jl1.0.jar=libs/jl1.0.jar
 file.reference.jpl.jar=libs/jpl.jar
+file.reference.jta.jar=libs/jta.jar
 file.reference.mp3spi1.9.4.jar=libs/mp3spi1.9.4.jar
 file.reference.mysql-connector-java-5.1.13-bin.jar=libs/mysql-connector-java-5.1.13-bin.jar
 file.reference.nimrodlf.jar=libs/nimrodlf.jar
@@ -87,11 +90,14 @@ javac.classpath=\
     ${file.reference.jasperreports-5.0.1.jar}:\
     ${file.reference.jasypt-1.6.jar}:\
     ${file.reference.javassist-3.15.0-GA.jar}:\
+    ${file.reference.javassist.jar}:\
     ${file.reference.jboss-logging-3.1.0.GA.jar}:\
     ${file.reference.jboss-transaction-api_1.1_spec-1.0.0.Final.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.jcommon-1.0.16.jar}:\
     ${file.reference.jl1.0.jar}:\
     ${file.reference.jpl.jar}:\
+    ${file.reference.jta.jar}:\
     ${file.reference.mp3spi1.9.4.jar}:\
     ${file.reference.mysql-connector-java-5.1.13-bin.jar}:\
     ${file.reference.nimrodlf.jar}:\
@@ -140,10 +146,6 @@ platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
-# Space-separated list of JVM arguments used when running the project.
-# You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
-# To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=-Djava.library.path="C:\\Program Files (x86)\\swipl\\bin;C:\\Program Files (x86)\\swipl\\lib"
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
