--- a/Speart/nbproject/project.properties
+++ b/Speart/nbproject/project.properties
@@ -146,6 +146,7 @@ platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
+run.jvmargs=-Djava.library.path="/usr/lib/swipl-6.5.2/lib/x86_64-linux"
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
