--- a/Speart/nbproject/project.properties
+++ b/Speart/nbproject/project.properties
@@ -56,8 +56,9 @@ file.reference.jboss-logging-3.1.0.GA.jar=libs/jboss-logging-3.1.0.GA.jar
 file.reference.jboss-transaction-api_1.1_spec-1.0.0.Final.jar=libs/jboss-transaction-api_1.1_spec-1.0.0.Final.jar
 file.reference.jcalendar-1.4.jar=libs/jcalendar-1.4.jar
 file.reference.jcommon-1.0.16.jar=libs/jcommon-1.0.16.jar
+file.reference.jhall.jar=libs/jhall.jar
 file.reference.jl1.0.jar=libs/jl1.0.jar
-file.reference.jpl.jar=libs/jpl.jar
+file.reference.jpl.jar=C:\\Program Files (x86)\\swipl\\lib\\jpl.jar
 file.reference.jta.jar=libs/jta.jar
 file.reference.mp3spi1.9.4.jar=libs/mp3spi1.9.4.jar
 file.reference.mysql-connector-java-5.1.13-bin.jar=libs/mysql-connector-java-5.1.13-bin.jar
@@ -96,14 +97,15 @@ javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.jcommon-1.0.16.jar}:\
     ${file.reference.jl1.0.jar}:\
-    ${file.reference.jpl.jar}:\
     ${file.reference.jta.jar}:\
     ${file.reference.mp3spi1.9.4.jar}:\
+    ${file.reference.jpl.jar}:\
     ${file.reference.mysql-connector-java-5.1.13-bin.jar}:\
     ${file.reference.nimrodlf.jar}:\
     ${file.reference.swingx-all-1.6.3.jar}:\
     ${file.reference.tritonus_share.jar}:\
-    ${file.reference.weka.jar}
+    ${file.reference.weka.jar}:\
+    ${file.reference.jhall.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -146,7 +148,7 @@ platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
-run.jvmargs=-Djava.library.path="/usr/lib/swipl-6.5.2/lib/x86_64-linux"
+run.jvmargs=-Djava.library.path="C:\\Program Files (x86)\\swipl\\bin;C:\\Program Files (x86)\\swipl\\lib"
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
