--- a/Speart/nbproject/project.properties
+++ b/Speart/nbproject/project.properties
@@ -32,11 +32,14 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.AbsoluteLayout.jar=libs/AbsoluteLayout.jar
+file.reference.activation.jar=libs/activation.jar
 file.reference.antlr-2.7.7.jar=libs/antlr-2.7.7.jar
 file.reference.basicplayer3.0.jar=libs/basicplayer3.0.jar
 file.reference.commons-beanutils-1.8.0.jar=libs/commons-beanutils-1.8.0.jar
 file.reference.commons-collections-2.1.1.jar=libs/commons-collections-2.1.1.jar
 file.reference.commons-digester-1.7.jar=libs/commons-digester-1.7.jar
+file.reference.commons-fileupload-1.2.1.jar=libs/commons-fileupload-1.2.1.jar
+file.reference.commons-io-1.4.jar=libs/commons-io-1.4.jar
 file.reference.commons-logging-1.0.4.jar=libs/commons-logging-1.0.4.jar
 file.reference.commons-logging-1.1.jar=libs/commons-logging-1.1.jar
 file.reference.DateChooser.jar=libs/DateChooser.jar
@@ -60,9 +63,11 @@ file.reference.jhall.jar=libs/jhall.jar
 file.reference.jl1.0.jar=libs/jl1.0.jar
 file.reference.jpl.jar=C:\\Program Files (x86)\\swipl\\lib\\jpl.jar
 file.reference.jta.jar=libs/jta.jar
+file.reference.mail.jar=libs/mail.jar
 file.reference.mp3spi1.9.4.jar=libs/mp3spi1.9.4.jar
 file.reference.mysql-connector-java-5.1.13-bin.jar=libs/mysql-connector-java-5.1.13-bin.jar
-file.reference.nimrodlf.jar=libs/nimrodlf.jar
+file.reference.nimrodlf-1.2.jar=libs\\nimrodlf-1.2.jar
+file.reference.smtp.jar=libs/smtp.jar
 file.reference.swingx-all-1.6.3.jar=libs/swingx-all-1.6.3.jar
 file.reference.tritonus_share.jar=libs/tritonus_share.jar
 file.reference.weka.jar=libs/weka.jar
@@ -73,11 +78,14 @@ jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.AbsoluteLayout.jar}:\
     ${file.reference.DateChooser.jar}:\
+    ${file.reference.activation.jar}:\
     ${file.reference.antlr-2.7.7.jar}:\
     ${file.reference.basicplayer3.0.jar}:\
     ${file.reference.commons-beanutils-1.8.0.jar}:\
     ${file.reference.commons-collections-2.1.1.jar}:\
     ${file.reference.commons-digester-1.7.jar}:\
+    ${file.reference.commons-fileupload-1.2.1.jar}:\
+    ${file.reference.commons-io-1.4.jar}:\
     ${file.reference.commons-logging-1.0.4.jar}:\
     ${file.reference.commons-logging-1.1.jar}:\
     ${file.reference.dom4j-1.6.1.jar}:\
@@ -96,16 +104,18 @@ javac.classpath=\
     ${file.reference.jboss-transaction-api_1.1_spec-1.0.0.Final.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.jcommon-1.0.16.jar}:\
+    ${file.reference.jhall.jar}:\
     ${file.reference.jl1.0.jar}:\
-    ${file.reference.jta.jar}:\
-    ${file.reference.mp3spi1.9.4.jar}:\
     ${file.reference.jpl.jar}:\
+    ${file.reference.jta.jar}:\
+    ${file.reference.mail.jar}:\
+    ${file.reference.mp3spi1.9.4.jar}:\
     ${file.reference.mysql-connector-java-5.1.13-bin.jar}:\
-    ${file.reference.nimrodlf.jar}:\
+    ${file.reference.nimrodlf-1.2.jar}:\
+    ${file.reference.smtp.jar}:\
     ${file.reference.swingx-all-1.6.3.jar}:\
     ${file.reference.tritonus_share.jar}:\
-    ${file.reference.weka.jar}:\
-    ${file.reference.jhall.jar}
+    ${file.reference.weka.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
