--- a/Speart/nbproject/project.properties
+++ b/Speart/nbproject/project.properties
@@ -158,7 +158,7 @@ platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
-run.jvmargs=-Djava.library.path="/usr/lib/swipl-6.5.2/lib/x86_64-linux/"
+run.jvmargs=-Djava.library.path="C:\\Program Files (x86)\\swipl\\bin;C:\\Program Files (x86)\\swipl\\lib" 
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
